<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.thever4.yanboard.MainActivity">


    <EditText
        android:id="@+id/editIP"
        android:inputType="number"
        android:digits="0123456789."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ConnectButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="45dp"
        android:ems="10"
        android:text="192.168." />

    <Button
        android:id="@+id/ConnectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_button"
        android:layout_marginTop="12dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/editIP" />

    <Button
        android:id="@+id/find_srv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/automatic_button"
        android:layout_below="@+id/editIP"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp" />

    <Switch
        android:id="@+id/switchVibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/vibro"
        android:layout_below="@+id/find_srv"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:textColor="#000000"
        android:layout_alignTop="@+id/midiChannel"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/midiChannel"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/switchVibro"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/octaves"
        android:layout_below="@+id/midiChannel"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/midiOctaves"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/midiChannel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        android:layout_below="@+id/midiOctaves"
        android:layout_alignParentStart="true" />

</RelativeLayout>
